force-app/main/default/objects/Promotion__c/fields/Promotion_Activity__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Infowelders</description>
    <label>Promotion Activity</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>Promotion_Activity__c.Market__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Market__c</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>equals</operation>
            <value>ALL</value>
        </filterItems>
        <filterItems>
            <field>Promotion_Activity__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Displaying only Active Promotion Activities in your Market</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Promotion_Activity__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>