force-app/main/default/objects/Promotion__c/fields/Total_Actual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Volume__c</fullName>
    <label>Total Actual Volume</label>
    <summarizedField>Promotion_Material_Item__c.Actual_Volume__c</summarizedField>
    <summaryForeignKey>Promotion_Material_Item__c.Promotion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>