force-app/main/default/objects/Promotion__c/fields/Total_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Fee Paid</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>