force-app/main/default/objects/Promotion__c/fields/Total_Listing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Listing_Fee__c</fullName>
    <label>Total Listing Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>