force-app/main/default/objects/Promotion__c/fields/Total_Planned_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Discount__c</fullName>
    <label>Total Planned Discount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>