force-app/main/default/objects/Promotion__c/fields/Total_Promotional_Activity_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Promotional_Activity_Paid__c</fullName>
    <label>Total Promotional Activity Paid</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>